-
Bug
-
Resolution: Fixed
-
P3
-
11, 15, 16
-
b13
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8256621 | 11.0.11-oracle | Dukebot | P3 | Resolved | Fixed | b01 |
See the attached crash dump. This happens occasionally on some AArch64 machines when using Graal. There seems to be a race between JVMCI initialisation and a compiler thread querying it via JVMCICompiler::force_comp_at_level_simple().
- backported by
-
JDK-8256621 "Invalid JNI handle" assertion failure in JVMCICompiler::force_comp_at_level_simple()
-
- Resolved
-