8251923: "Invalid JNI handle" assertion failure in JVMCICompiler::force_comp_at_level_simple()

Reviewed-by: kvn, dnsimon